--- a/css/output.css
+++ b/css/output.css
@@ -727,6 +727,14 @@ video {
   border-color: rgb(255 251 235 / var(--tw-border-opacity));
 }
 
+.logo-title {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(23 23 23 / var(--tw-text-opacity));
+}
+
 .workflow-title {
   font-size: 1.25rem;
   line-height: 1.75rem;
