✨ Even More Bugs!
HAHA

--- a/css/output.css
+++ b/css/output.css
@@ -735,6 +735,10 @@ video {
   color: rgb(23 23 23 / var(--tw-text-opacity));
 }
 
+.dark .logo-title {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 .workflow-title {
   font-size: 1.25rem;
   line-height: 1.75rem;
